# push_notif

./: .gitignore  Cargo.toml
migrations/: 001_init_users_keys.sql
src/: auth.rs  db.rs  handlers.rs  keys.rs  main.rs  push_service.rs  state.rs
static/: app.js  dashboard.html  index.html  login.html  push-notif.js  register.html  sw.js
