[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
web-push = { version = "0.11", default-features = false, features = ["isahc-client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
base64 = { version = "0.22", features = ["std"] }
anyhow = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
bcrypt = "0.17"
jsonwebtoken = "9"
cookie = "0.18"
tower-cookies = "0.10"
chrono = { version = "0.4", features = ["serde"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
